--- a/projects.css
+++ b/projects.css
@@ -77,7 +77,7 @@ nav a::after {
     width: 90%;
     height: fit-content;
     max-width: 1200px;
-    margin-inline: 30px;
+    margin-inline: auto;
 }
 
 h1 {
@@ -225,4 +225,5 @@ h1 {
     .languages {
         gap: 50px;
     }
+
 }
