--- a/mainstylesheet.css
+++ b/mainstylesheet.css
@@ -334,7 +334,7 @@ nav.nav_appear {
 
     /* LOGO */
     .logo {
-        margin-left: 10px;
+        margin: 4px 10px;
     }
 
     /* NAVIGATION BAR */
