--- a/home.css
+++ b/home.css
@@ -175,13 +175,13 @@ nav a.active {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    justify-self: center;
-    width: inherit;
+    /* justify-self: center; */
+    margin-inline: auto;
+    width: 90%;
     padding-block: 5%;
-    padding-inline: 10%;
-    font-size: var(--step-0);
+    /* padding-inline: 10%; */
     text-align: center;
-
+    font-size: var(--step-0);
 }
 
 .cardviewImageRight {
