--- a/artwork.css
+++ b/artwork.css
@@ -24,25 +24,23 @@ nav a.active {
   gap: 1%;
   width: 90%;
   max-width: 1300px;
-  /* aspect-ratio: 1.9/1; */
-  max-height: 600px;
+  /* max-height: 600px; */
   opacity: 0;
   animation: opa_func 1.8s forwards;
   margin-inline: auto;
-  height: 450px;
+  height: 600px;
 }
 
 @keyframes opa_func {
   100% {
     opacity: 1;
   }
-
 }
 
 .pic_list img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit:cover;
 }
 
 .overlay {
@@ -237,6 +235,7 @@ nav a.active {
     aspect-ratio: 1/1;
     gap: 4%;
     max-height: 100%;
+    height: 1500px;
   }
 
   .slider-img {
