--- a/artwork.css
+++ b/artwork.css
@@ -65,8 +65,6 @@ nav a.active {
 
 .back_class {
   transform: rotate(5deg) !important;
-  -webkit-transform: rotate(5deg) translateZ(0) !important;
-  transform: rotate(5deg) translateZ(0) !important;
 }
 
 .slider-img {
@@ -91,6 +89,7 @@ nav a.active {
   0% {
     border-width: 1px;
     border-color: transparent;
+    transform: rotate(0deg);
   }
 
   100% {
@@ -198,6 +197,7 @@ nav a.active {
     0% {
       border-width: 1px;
       border-color: transparent;
+    transform: rotate(0deg);
     }
 
     100% {
@@ -261,6 +261,7 @@ nav a.active {
     0% {
       border-width: 1px;
       border-color: transparent;
+    transform: rotate(0deg);
     }
 
     100% {
