--- a/mainstylesheet.css
+++ b/mainstylesheet.css
@@ -73,6 +73,16 @@ body {
     stroke: var(--primary-dark-grey);
     stroke-width:0.7px;
     transition: 1s stroke ease;
+
+    stroke-dasharray: 100;
+    stroke-dashoffset: 100;
+    animation: draw 3s ease-in forwards;
+}
+
+@keyframes draw {
+    to {
+        stroke-dashoffset: 0;
+    }
 }
 
 .logo circle {
