--- a/artwork.css
+++ b/artwork.css
@@ -24,7 +24,6 @@ nav a.active {
   gap: 1%;
   width: 90%;
   max-width: 800px;
-  /* max-height: 600px; */
   opacity: 0;
   animation: opa_func 1.8s forwards;
   margin-inline: auto;
@@ -72,8 +71,11 @@ nav a.active {
   border-radius: 4px;
   position: relative;
   overflow: hidden;
-  transition: 0.8s ease-out;
+  /* transition: 0.8s ease-out; */
+  transition: transform 0.3s ease-out, width 0.8s ease-out, height 0.8s ease-out, border-radius 0.8s ease-out;
+
   cursor: pointer;
+  transform: rotate(0deg);
 }
 
 .slider-img.active {
@@ -81,6 +83,7 @@ nav a.active {
   border-radius: 0;
   height: 75% !important;
   z-index: 10;
+  transform: rotate(-5deg);
   animation: polaroid_border 0.6s forwards;
 }
 
@@ -89,14 +92,12 @@ nav a.active {
   0% {
     border-width: 1px;
     border-color: transparent;
-    transform: rotate(0deg);
   }
 
   100% {
     border-width: 10px 10px 50px 10px;
     border-color: rgb(245, 239, 229);
     border-style: solid;
-    transform: rotate(-5deg);
   }
 
 }
@@ -197,14 +198,12 @@ nav a.active {
     0% {
       border-width: 1px;
       border-color: transparent;
-    transform: rotate(0deg);
     }
 
     100% {
       border-width: 10px 10px 80px 10px;
       border-color: rgb(245, 239, 229);
       border-style: solid;
-      transform: rotate(-5deg);
     }
 
   }
@@ -262,14 +261,12 @@ nav a.active {
     0% {
       border-width: 1px;
       border-color: transparent;
-    transform: rotate(0deg);
     }
 
     100% {
       border-width: 10px 10px 70px 10px;
       border-color: rgb(245, 239, 229);
       border-style: solid;
-      transform: rotate(-5deg);
     }
 
   }
