made a couple small visual updates

--- a/artwork.css
+++ b/artwork.css
@@ -54,12 +54,14 @@ nav a.active {
   opacity: 0;
   background-color: rgb(57, 57, 57);
   font-size: 16px;
+  pointer-events: none;
 }
 
 .overlay p {
   margin-inline: 5%;
   font-size: var(--step--2);
   color: white;
+  
 }
 
 .back_class {
@@ -71,8 +73,8 @@ nav a.active {
   border-radius: 4px;
   position: relative;
   overflow: hidden;
-  /* transition: 0.8s ease-out; */
-  transition: transform 0.3s ease-out, width 0.8s ease-out, height 0.8s ease-out, border-radius 0.8s ease-out;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.3s ease-in, transform 0.3s ease-out, width 0.8s ease-out, height 0.8s ease-out, border-radius 0.8s ease-out;
 
   cursor: pointer;
   transform: rotate(0deg);
