--- a/home.css
+++ b/home.css
@@ -139,10 +139,11 @@ nav a.active {
 .my_name_text {
     text-align: center;
     font-size: 40px;
+    font-weight: bold;
+    letter-spacing:1px;
     color: white;
     margin: 0;
-    /* margin-top: -45px; */
-    text-shadow: 2px 2px 4px rgba(30, 30, 30, 1.0);
+    text-shadow: 2px 2px 6px rgba(30, 30, 30, 1.0);
 }
 
 /* ABOUT ME */
