--- a/artwork.css
+++ b/artwork.css
@@ -28,6 +28,7 @@ nav a.active {
   animation: opa_func 1.8s forwards;
   margin-inline: auto;
   height: 350px;
+  transition:  max-width 0.5s ease;
 }
 
 @keyframes opa_func {
@@ -97,7 +98,7 @@ nav a.active {
   }
 
   100% {
-    border-width: 10px 10px 50px 10px;
+    border-width: 10px 10px 60px 10px;
     border-color: rgb(245, 239, 229);
     border-style: solid;
   }
@@ -164,7 +165,7 @@ nav a.active {
 }
 
 .body_text {
-  font-size: 18px;
+  font-size: 22px;
   margin: 0;
   margin-bottom: 12.5px;
   line-height: 1.4;
@@ -195,7 +196,7 @@ nav a.active {
 @media (min-width: 1000px) {
 
   /* makes bottom of polaroid bigger on larger screens */
-  @keyframes polaroid_border {
+  /* @keyframes polaroid_border {
 
     0% {
       border-width: 1px;
@@ -208,6 +209,15 @@ nav a.active {
       border-style: solid;
     }
 
+  } */
+
+  .pic_list {
+  max-width: 1000px;
+  height: 400px;
+}
+
+  .slider-img {
+  width: 24%;
   }
 
 }
@@ -219,6 +229,7 @@ nav a.active {
   .body_container {
     padding-inline: 2%;
   }
+
 }
 
 
@@ -288,6 +299,10 @@ nav a.active {
     width: 100%;
     height: 400px;
     margin-bottom: 10px;
+  }
+
+    .body_text {
+    font-size: 20px;
   }
 
 }
