--- a/home.css
+++ b/home.css
@@ -9,46 +9,27 @@ nav a.active {
 
 
 /* LINED DIVIDERS */
-.line_combo {
-    margin: 0;
-    padding: 0;
-    /* overflow: hidden; */
+#svgContainerID {
+    position: relative;
 }
 
-.custom_divider {
-    border: none;
-    border-top: 2px solid #000;
-    margin-block: 0;
-    width: 70px;
-}
-
-.right_line,
-.left_line {
+    #svg-canvas {
     position: absolute;
-    height: 99.5px;
-    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: -9;
 }
 
-.right_line {
-    border-left: 2px solid #000;
-    margin-top: -97.5px;
+#svg-canvas path {
+    stroke: black;
+    stroke-width: 4;
+    fill: none;
+    stroke-dasharray: 16, 8;
+    transition: stroke 0.3s;
 }
-
-.left_line {
-    border-left: 2px solid #000;
-    margin-bottom: -100px;
-}
-
-.line_combo.reverse .right_line {
-    margin-bottom: -100px;
-    margin-top: 0;
-}
-
-.line_combo.reverse .left_line {
-    margin-top: -100px;
-    margin-bottom: 0;
-}
-
 
 /* BUTTONS */
 .div_buttons {
@@ -180,7 +161,7 @@ nav a.active {
     /* justify-self: center; */
     margin-inline: auto;
     width: 90%;
-    padding-block: 5%;
+    padding-block: 8%;
     /* padding-inline: 10%; */
     text-align: center;
     font-size: var(--step-0);
@@ -193,7 +174,7 @@ nav a.active {
     margin-inline: auto;
     /* justify-content: space-evenly; */
     width: 90%;
-    padding-block: 5%;
+    padding-block: 8%;
     /* padding-inline: 10%; */
     text-align: center;
     font-size: var(--step-0);
@@ -201,7 +182,7 @@ nav a.active {
 }
 
 .body_image {
-    width: 330px;
+    width: 350px;
     border-radius: 5%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
@@ -254,24 +235,6 @@ nav a.active {
         font-weight: 400;
         font-style: normal;
         line-height: 1.6;
-    }
-
-
-    /* LINED DIVIDERS */
-    .custom_divider {
-        position: relative;
-        rotate: 90deg;
-        width: 350px !important;
-        margin-top: -30px;
-        z-index: -1;
-    }
-
-    .left_line {
-        display: none;
-    }
-
-    .right_line {
-        display: none;
     }
 
     .my_name_text {
